--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = chevox7/Expertha1
 	url = git@github.com:chevox7/Expertha1.git
 	branch = main
+
+[submodule "chevox7/ProyectoPrueba"]
+	path = chevox7/ProyectoPrueba
+	url = git@github.com:chevox7/ProyectoPrueba.git
+	branch = prueba
